Migrate transactions page to React SPA
